    --show-mutex - shows locks and unlocks of a particular mutex
    --unbind in genols (new flag) - shows the components of bound files
    --show-dict and show-b250 now accept an optional paramter + removed --show-one-dict and --show-one-b250
    --show-digest show (md5 or Adler32) updates
    --stdout - flag canceled for compression (genozip), available for decompression (genounzip, genocat, genozip -d)
    --input - renamed from --input-type
    
Compression improvements:
- For b250 sections that have all the same entry - store the entry only once. If the entry is word_index=0, drop the section
- Improvements in codec assignment algorithm, and use it for dictionary and some other section types in addition to b250 and local
- 30% improvment in dictionary size of disk due to consolidation of fragments and codec assignment.
- Multi-threaded decompression of dictionaries.
- Speed improvements by having bsc and zlib use libdeflate's version of adler32 and crc32

Cleanup:
- removed support for Visual C compiler

9.0.1-6
- bug fixes and minor improvements

9.0.7
- New flags:
    genocat --downsample <rate> - show only one in every X lines (or reads)
    genocat --one-vb <vb>       - show data from a single VB
- bug fixes

9.0.8-9
- bug fixes

9.0.10
- Added the --index option for genounzip / genocat to create an index file alongside the decompressed file

9.0.11
- Added Phylip data type
- genozip --pair       can now compress any number of fastq files - every 2 consecutive files are considered a pair
- genocat --header-one now works of FASTA too: Output the sequence name up to the first space or tab
- genocat --phylip     new translator - outputs a multi-fasta file in Phylip format
- genocat --fasta      new translator - outputs a Phylip file in multi-fasta format
- bug fixes
- Developer options:
    --xthreads Use only 1 threads for the main PIZ/ZIP dispatcher. This doesn't affect thread use of other dispatchers